tests/errors/matrix_transpose_01.f90
program matrix_transpose_01
    implicit none
    integer :: a(3)
    print *, transpose(a)
end program
